<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="app_name">MusicFeel</string>
    <string name="action_settings">Settings</string>
    <string name="texto_boton_archivo">Reproducir desde archivo</string>
    <string name="texto_boton_grabar">Reproducir en vivo</string>
    <string name="icono">Icono de la aplicación</string>
    <string name="tituloApp">MusicFeel</string>
    <string name="circulos">Circulos</string>
    <string name="xilofono">-</string>
    <string name="ecualizador">Ecualizador</string>
    <string name="cuarteto">Cuarteto</string>
</resources>
