<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape"
    android:orientation="vertical"
    tools:context=".MainActivity" >

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="300dp"
	    android:gravity="center"
	    android:layout_weight="2"
	    android:orientation="vertical" >

	    <ImageView
	        android:id="@+id/icono_pantallaprincipal"
	        android:layout_width="144dp"
	        android:layout_height="144dp"
	        android:contentDescription="@string/icono"
	         />
		<TextView 
		    android:paddingTop="20dp"
		    android:gravity="center"
		    android:id="@+id/fuente"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:text="@string/tituloApp"
		    android:textSize="30sp"
		    android:textColor="#000"
		    />
	</LinearLayout>

	<LinearLayout 
	    android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:orientation="vertical"
    	android:layout_weight="1"
    	tools:context=".MainActivity" >

		<Button
		    android:id="@+id/boton_archivo"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="2"
		    android:background="@drawable/boton"
		    android:gravity="center"
		    android:textColor="#000"
		    android:textSize="19sp"
		    android:textStyle="bold"
		    android:typeface="serif"
		    android:layout_marginTop="4dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="4dp"
		    android:text="@string/texto_boton_archivo" />

		<Button
		    android:id="@+id/boton_grabacion"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center"
		    android:textColor="#000"
		    android:layout_weight="2"
		    android:background="@drawable/boton"
		    android:textSize="19sp"
		    android:textStyle="bold"
		    android:typeface="serif"
		    android:layout_marginTop="2dp"
		    android:layout_marginLeft="10dp"
		    android:layout_marginRight="10dp"
		    android:layout_marginBottom="6dp"
		    android:text="@string/texto_boton_grabar" />
	</LinearLayout>

</LinearLayout>
